--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -6,7 +6,11 @@
       "dom.iterable",
       "esnext"
     ],
-    "typeRoots": ["src/@types", "./node_modules/@types"],
+    "types": [
+      "webpack-env",
+      "./src/@types",
+      "../index.d.ts"
+    ],
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
@@ -20,10 +24,6 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
-    "types": [
-      "node",
-      "webpack-env"
-    ]
   },
   "include": [
     "src"
