--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "github-download-page",
   "version": "1.0.0",
   "description": "A beautiful download page for your GitHub project.",
-  "exports": "./bin/server.ts",
+  "main": "./dist/index.js",
   "scripts": {
     "preinstall": "cd frontend && npm i",
     "dev": "ts-node-esm -r dotenv/config -r tsconfig-paths/register bin/server.ts",
@@ -26,20 +26,22 @@
   },
   "homepage": "https://github.com/therealsujitk/github-download-page#readme",
   "dependencies": {
+    "date-fns": "^2.30.0",
+    "got": "^11.8.2",
+    "node-cache": "^5.1.2"
+  },
+  "peerDependencies": {
+    "express": "^4.18.2"
+  },
+  "devDependencies": {
     "@types/express": "^4.17.19",
     "@types/got": "^9.6.12",
     "@types/node": "^20.8.6",
-    "date-fns": "^2.30.0",
-    "express": "^4.18.2",
-    "got": "^11.8.2",
-    "node-cache": "^5.1.2",
-    "typescript": "^5.2.2"
-  },
-  "devDependencies": {
     "dotenv": "^16.3.1",
     "pre-commit": "^1.2.2",
     "ts-node": "^10.9.1",
-    "tsconfig-paths": "^4.2.0"
+    "tsconfig-paths": "^4.2.0",
+    "typescript": "^5.2.2"
   },
   "pre-commit": [
     "build"
